tests/errors/syn_test1.py
# syn_test1.py
def main():
    x = 5
    if x > 2
        print("x is greater than 2")

main()
